<resources>
    <string name="app_name">Appointment Reminder</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="dateTime">Date/Time</string>
    <string name="addAppoinment">Add Appoinment</string>
    <string name="enterName">Enter Name</string>
    <string name="cancel">Cancel</string>

    <string-array name="task_type">
        <item>Personal</item>
        <item>Work</item>
        <item>School</item>
        <item>Health</item>
        <item>Other</item>
    </string-array>
</resources>
